--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-flask
-uvicorn==0.22.0
-pydantic==1.10.7
-torch==2.0.1
-transformers==4.28.1
-python-multipart==0.0.6
-slowapi==0.1.0
-gunicorn== 23.0.0
-flask-cors==5.0.1
-Flask-Limiter==3.10.1
+Flask==2.0.3
+Flask-Cors==3.0.10
+Flask-Limiter==2.8.2
+torch==1.13.1
+transformers==4.26.1
+python-dotenv==0.19.2
+gunicorn==20.1.0
