--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.0.3
-Flask-Cors==3.0.10
-Flask-Limiter==2.8.0
 Werkzeug==2.0.3
-torch==1.13.1
+Flask-Cors==3.0.10
+Flask-Limiter==2.8.2
+torch==1.13.1+cu116  # Specific version with CUDA compatibility
 transformers==4.26.1
 python-dotenv==0.19.2
 gunicorn==20.1.0
+numpy==1.23.5  # Explicitly pin to last 1.x version
